fix color contrast problem on wave validator for hero-text

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -132,7 +132,7 @@ header {
 }
 
 .hero-text span {
-    color: #ff6c00;
+    color: #79031d;
 }
 
 /*About Section*/
